# naraka_qr_converter

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  app.manifest  build-windows.sh  build.rs
.github/workflows/: release.yml
src/: ca.rs  gui.rs  install.rs  lifecycle.rs  main.rs  paths.rs  platform.rs  proxy.rs  qr.rs  redirect.rs  rewrite.rs  trust_store.rs  upstream.rs  wine.rs
