[package]
name = "photobooth-bridge"
version = "0.1.0"
edition = "2024"
description = "Transparent MITM proxy that bridges Naraka: Bladepoint Photo Booth shares between CN and Global regions"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
webpki-roots = "1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "tls12", "webpki-tokio"] }
rcgen = "0.13"
serde_json = "1"
tracing = "0.1"
sha1 = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-service = "0.3"
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
qrcode = { version = "0.14", default-features = false, features = ["image"] }
rqrr = "0.10"
rfd = "0.17"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_System_Console"] }

[build-dependencies]
embed-resource = "3"

[profile.release]
lto = "thin"
strip = true
opt-level = 3
